--- a/diabetesmellitus.ipynb
+++ b/diabetesmellitus.ipynb
@@ -7,7 +7,7 @@
     "# Early Detection of Diabetes Mellitus using Feature Selection and Fuzzy Support Vector Machine\n",
     "Batch K14\t\t\t\t\t Guide: Dr. M. Reza\n",
     "\n",
-    "B. Bahusya ( 221710311007)\n",
+    "Team Lead - B. Bahusya ( 221710311007)\n",
     "C. Charith ( 221710311008)\n",
     "Lanesh Karthik ( 221710311019)\n",
     "S. Shiva Kumar ( 221710311048)\n"
