--- a/diabetesmellitus.ipynb
+++ b/diabetesmellitus.ipynb
@@ -8,6 +8,7 @@
     "Batch K14\t\t\t\t\t Guide: Dr. M. Reza\n",
     "\n",
     "Team Lead - B. Bahusya ( 221710311007)\n",
+    "Team Mates:
     "C. Charith ( 221710311008)\n",
     "Lanesh Karthik ( 221710311019)\n",
     "S. Shiva Kumar ( 221710311048)\n"
